# DMIA_Industry_2019_Spring

./: .gitignore  README.md  requirements.txt  results.csv
hw01/: README.md
hw02/: Collections_solution.ipynb  Collections_task.ipynb  NumPy_SciPy_solution.ipynb  NumPy_SciPy_task.ipynb  Pandas_solution.ipynb  Pandas_task.ipynb  README.md  Visualize_solution.ipynb  Visualize_task.ipynb
hw03/: README.md  check_simple_gb.py  check_xgboost_params.py  gb_impl_checker.py  gb_impl_example.py  xgboost_params_checker.py  xgboost_params_example.json
hw04/: README.md  ad_budget_checker.py  ad_budget_example.py  check_ad_budget.py  check_logistic_regression.py  check_text_classification_params.py  logistic_regression_checker.py  logistic_regression_example.py  text_classification_params_checker.py  text_classification_params_example.json
hw05/: README.md  check.py  checker.py  example.py
lecture01/: README.md
seminar01/git/: README.md
seminar01/seminar1_project/: Notebook.ipynb  (+3 more)
seminar02/: Collections.ipynb  NumPy.ipynb  Pandas_Join.ipynb  Pandas_part_1.ipynb  Pandas_part_2.ipynb  PySpark.ipynb  SciPy.ipynb  Visualize_matplotlib.ipynb  Visualize_seaborn.ipynb
seminar03/: 1.BiasVariance.ipynb  1.Boosting.ipynb  2.CategoricalFeatures.ipynb  3.CrossValidation.ipynb  4.Stacking.ipynb  geo.py
seminar04/: SVM.ipynb  TextClassification.ipynb
seminar05/: ClassificationMetrics.ipynb  RegressionMetrics.ipynb
seminar06/: SeminarStatTests.ipynb
seminar08/: Mining.ipynb  Timings.ipynb
seminar08/ml_cxx/: CMakeLists.txt  setup.py
seminar08/ml_cxx/src/: sources.cpp
(+30 files in other folders)
